# hidden-patterns-combat

./: .gitignore  README.md  pyproject.toml
Practice_project/: README.md  demo_economic_hmm.py  economic_hmm_analysis.py  enhanced_demo.py  generate_data.py  requirements.txt  test_import.py
analytics/: README.md
docs/: assumptions.md  data_dictionary.md  project_context.md  roadmap.md
notebooks/: inverse_diagnostic_demo.ipynb  mvp_demo.py  mvp_ui_demo.ipynb
scripts/: publish_inverse_artifacts.py  run_full_cycle.py  run_inverse_diagnostic_cycle.py
tests/: conftest.py  test_canonical_episode_table.py  test_cleanup_policy.py  test_cli_backward_compatibility.py  test_cli_notebook_consistency.py  test_data_dictionary.py  test_excel_loader.py  test_feature_encoder.py  test_feature_engineering.py  test_full_cycle.py  test_hidden_state_features.py  test_input_locator.py  test_inverse_diagnostic_cycle.py  test_inverse_hmm_constraints.py  test_inverse_notebook.py  test_inverse_pipeline.py  test_isolated_run_mode.py  test_matrix_parser.py  test_metadata_extraction_summary.py  test_model_health_summary.py  test_modeling_decoding.py  test_modeling_observation.py  test_modeling_semantic_states.py  test_modeling_state_definition.py  test_modeling_topology.py  test_notebook_loader_stale_detection.py  test_observation_audit.py  test_observation_builder.py  test_pipeline_hmm_features.py  test_preprocessing_cleaning.py  test_preprocessing_headers.py  test_preprocessing_ingestion.py  test_preprocessing_matrix_ingestion.py  test_preprocessing_transform.py  test_run_manifest.py  (+3 more)
(+69 files in other folders)
