[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidden-patterns-combat"
version = "0.1.0"
description = "MVP for hidden-pattern analysis of combat sports episodes with HMM"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.25",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "matplotlib>=3.8",
  "scikit-learn>=1.4",
  "hmmlearn>=0.3.2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
